--- a/benchmark.html
+++ b/benchmark.html
@@ -170,6 +170,20 @@ sitemap:
                                         <td>Default</td>
                                         <td>None</td>
 				</tr>
+				<tr>
+					<th>Macbook Pro(15-inch, 2016)</th>
+                                        <th>Intel Core i7</th>
+                                        <th>2.6 GHz</th>
+                                        <th>6 MB</th>
+                                        <th>LPDDR3</th>
+                                        <th>16</th>
+                                        <th>2133</th>
+                                        <th>3.40</th>
+                                        <th>Chrome</th>
+                                        <th>macOS High Sierra 10.13.2</th>
+                                        <th>Default</th>
+                                        <th>AMD Radeon Pro 450 2g</th>
+				</tr>
 			</tbody>
 			<tfoot>
 				<tr>
